--- a/Página Inicial/index.html
+++ b/Página Inicial/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Cronologia de Call of Duty: conheça a história dos jogos da franquia</title>
-    <link rel="stylesheet" href="Form/styles.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+    <ul>
+        <li><a href="#">Página Inicial</a></li>
+    </ul>
     <div class="container">
         <!--cabeçalho-->
         <div class="header">
