--- a/Página Inicial/index.html
+++ b/Página Inicial/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="#">Página Inicial</a></li>
+        <li><a href="index.html">Página Inicial</a></li>
+        <li><a href="index2.html">Fotos</a></li>
+        <li><a href="index3.html">Dicas de Como Jogar</a></li>
     </ul>
     <div class="container">
         <!--cabeçalho-->
