--- a/Página Inicial/index.html
+++ b/Página Inicial/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">Página Inicial</a></li>
-        <li><a href="index2.html">Fotos</a></li>
-        <li><a href="index3.html">Dicas de Como Jogar</a></li>
+    <ul class="inicial">
+        <li class="pagina"><a href="index.html">Página Inicial</a></li>
+        <li class="pagina"><a href="index2.html">Fotos</a></li>
+        <li class="pagina"><a href="index3.html">Dicas de Como Jogar</a></li>
     </ul>
     <div class="container">
         <!--cabeçalho-->
@@ -20,7 +20,7 @@
         </div>
         <div class="featured-image">
             <figure>
-                <img class="img" src="img/img-1.jpg" width="700px" alt="Mais de 100 anos de conflitos armados; conheça a cronologia de Call of Duty com detalhes da série clássica de guerra">
+                <img class="img" src="img/img-1.jpg" width="600px" alt="Mais de 100 anos de conflitos armados; conheça a cronologia de Call of Duty com detalhes da série clássica de guerra">
                 <figcaption> A cronologia de Call of Duty</figcaption>
             </figure>
         </div>
