--- a/Página Inicial/index.html
+++ b/Página Inicial/index.html
@@ -6,77 +6,23 @@
     <title>A Cronologia de Call of Duty: conheça a história dos jogos da franquia</title>
     <link rel="stylesheet" href="Style.css">
 </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <body>
-    <ul class="inicial">
-        <li class="pagina"><a href="index.html">Página Inicial</a></li>
-        <li class="pagina"><a href="index2.html">Fotos</a></li>
-        <li class="pagina"><a href="index3.html">Dicas de Como Jogar</a></li>
-    </ul>
-    <div class="container">
-        <!--cabeçalho-->
-        <div class="header">
-            <h1 class="main-title">A Cronologia de Call of Duty: </h1>
-            <p class="main-paragraph">Conheça a história dos jogos da franquia</p>
-        </div>
-        <div class="featured-image">
-            <figure>
-                <img class="img" src="img/img-1.jpg" width="600px" alt="Mais de 100 anos de conflitos armados; conheça a cronologia de Call of Duty com detalhes da série clássica de guerra">
-                <figcaption> A cronologia de Call of Duty</figcaption>
-            </figure>
-        </div>
-        <div class="biography">
-            <h2>1. Call of Duty: WW2 (entre 1940 – 1945)
-            </h2>
-            <p>Um dos mais recentes lançamentos é o primeiro na ordem cronológica do enredo. <br> 
-                A 2ª Guerra Mundial se passa antes de todas as outras. O primeiro ano em que <br>
-                o jogo remonta é 1940, mas a maior parte da história ocorre entre 1944 e 1945.</p> 
-            <p>A história segue o soldado Ronald “Red” Daniels e seu esquadrão de infantaria enquanto <br>
-                tentam acabar com os nazistas no final da Segunda Guerra Mundial.</p>
-            <ul>
-                <li>Ano de lançamento: 2017</li>
-                <li>Plataformas: Windows, Xbox One, PS4 </li>
+    <header>
+        <nav>
+            <ul class="navbar">
+                <li><a href="/Página Inicial/index.html">Página Inicial</a></li>
+                <li><a href="/Página Inicial/index2.html">Imagens</a></li>
+                <li><a href="/Página Inicial/index3.html">Curiosidades</a></li>
             </ul>
-        </div>
-        <h2>2. Call of Duty 2 (entre 1941 – 1945)</h2>
-        <p>A maioria dos primeiros títulos de Call Of Duty tem início em 1942, o segundo jogo é <br>
-            uma exceção, pois começa no final de 1941. Durante a campanha, controla-se soldados <br>
-            de três das potências aliadas: EUA, Grã-Bretanha e Rússia. Cada uma das aventuras <br>
-            acontece separadamente, e todas com muitos obstáculos difíceis de superar. </p>
-        <ul>
-            <li>Ano de lançamento: 2005</li>
-            <li>Plataformas: Windows, Mac, Xbox 360 </li>
-        </ul>
-        <h2>3. Call of Duty: World at War (entre 1942 – 1945)</h2>
-        <p>A cronologia de Call of Duty, pelo menos nos primeiros títulos, bem confusa. No início <br>
-            do jogo, o jogador participa do ataque à Ilha Makin, ocorrido em 1942, como sua contraparte <br>
-             da vida real. O resto da história se desenrola de maneira semelhante, conforme se envolve em <br>
-              muitas batalhas e incidentes famosos da 2ª Guerra Mundial. Em cada missão, seguem-se algumas <br>
-               tropas americanas ou o foco vai para um esquadrão russo. </p>
-        <ul>
-            <li>Ano de lançamento: 2008</li>
-            <li>Plataformas: Windows, Xbox 360, PS3, Nintendo DS </li>
-        </ul>
-        <h2>4. Call of Duty (entre 1942 – 1945)</h2>
-        <p>Apesar de ter começado também em 1942, a maior parte do primeiro jogo se apresenta em 1944 <br>
-             e 1945, quando as potências aliadas se opõem às forças nazistas. </p>
-        <p>No clássico estilo COD, a campanha permite que se observe três perspectivas diferentes sobre<br>
-             a guerra, com diversos protagonistas. Os personagens principais pertencem a nações <br>
-             diferentes, mas todos eles têm o mesmo objetivo de virar a guerra a favor das potências <br>
-             aliadas.  </p>
-        <ul>
-            <li>Ano de lançamento: 2003</li>
-            <li>Plataformas: Windows, Mac, Ps3, Xbox 360 </li>
-        </ul>
-        <h2>5. Call of Duty 3 (1944)</h2>
-        <p>Até que enfim um jogo mais fácil de definir o período. A campanha de Call of Duty 3 concentra-se <br>
-             exclusivamente, em 1944 com a maior parte da atenção voltada para a Batalha da Normandia – o <br>
-             início do fim do terceiro Reich. </p>
-        <p>Outro aspecto interessante da história é que as forças polonesas, francesas e canadenses têm grandes <br>
-            papéis na trama, ao lado dos soldados americanos e britânicos já conhecidos. </p>
-        <ul>
-            <li>Ano de lançamento: 2006</li>
-            <li>Plataformas: Xbox, Xbox 360, PS2, PS3, Wii </li>
-        </ul>
-    </div>
+        </nav>
+    </header>
+<main>
+<section id="inicio">
+    <h1>CSS GO: O jogo que emocionou gerações.</h1>
+</section>
+</main>
 </body>
 </html>
