--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <body>
-    <header>
+    <header class="barra-superior">
         <nav>
             <ul class="navbar">
-                <li><a href="/Página Inicial/index.html">Página Inicial</a></li>
-                <li><a href="/Página Inicial/index2.html">Imagens</a></li>
-                <li><a href="/Página Inicial/index3.html">Curiosidades</a></li>
+                <li><a href="/Página Inicial/index.html">PÁGINA INICIAL</a></li>
+                <li><a href="/Página Inicial/index2.html">IMAGENS</a></li>
+                <li><a href="/Página Inicial/index3.html">CURIOSIDADES</a></li>
             </ul>
         </nav>
     </header>
