--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
 <body>
     <header class="barra-superior">
         <nav>
+            <img src="/img/logo-4-Photoroom.png" alt="Logo-css" class="logo">
             <ul class="navbar">
-                <li><a href="/Página Inicial/index.html">PÁGINA INICIAL</a></li>
-                <li><a href="/Página Inicial/index2.html">IMAGENS</a></li>
-                <li><a href="/Página Inicial/index3.html">CURIOSIDADES</a></li>
+                <li><a href="/Página Inicial/index.html"><strong>PÁGINA INICIAL</strong></a></li>
+                <li><a href="/Página Inicial/index2.html"><strong>IMAGENS</strong></a></li>
+                <li><a href="/Página Inicial/index3.html"><strong>CURIOSIDADES</strong></a></li>
             </ul>
         </nav>
     </header>
+    <img src="/img/inicial.png" alt="Capa do CS-GO" class="capacss">
 <main>
 <section id="inicio">
     <h1>CSS GO: O jogo que emocionou gerações.</h1>
 </section>
 </main>
+<footer class="barra-inferior">
+    <p> &copy; 2024 - Criado por Flavia Dev</p>
+</footer>
 </body>
 </html>
