--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="barra-superior">
         <nav>
-            <img src="/img/logo-4-Photoroom.png" alt="Logo-css" class="logo">
+            <img src="/logo-4-Photoroom.png" alt="Logo-css" class="logo">
             <ul class="navbar">
                 <li><a href="/Página Inicial/index.html"><strong>PÁGINA INICIAL</strong></a></li>
                 <li><a href="/Página Inicial/index2.html"><strong>IMAGENS</strong></a></li>
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <img src="/img/inicial.png" alt="Capa do CS-GO" class="capacss">
+    <img src="/inicial.png" alt="Capa do CS-GO" class="capacss">
 <main>
 <section id="inicio">
     <h1>CSS GO: O jogo que emocionou gerações.</h1>
