--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>A Cronologia de Call of Duty: conheça a história dos jogos da franquia</title>
     <link rel="stylesheet" href="Style.css">
 </head>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
     <header class="barra-superior">
         <nav class="logo-background">
@@ -91,4 +89,5 @@
     </footer>
 </body>
 </html> 
+
 
