--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Cronologia de Call of Duty: conheça a história dos jogos da franquia</title>
@@ -25,15 +28,13 @@
         <hr>
         <br>
         </h2>
-        <p>Um dos mais recentes lançamentos é o primeiro na ordem cronológica do enredo. <br> 
-            A 2ª Guerra Mundial se passa antes de todas as outras. O primeiro ano em que <br>
-            o jogo remonta é 1940, mas a maior parte da história ocorre entre 1944 e 1945.</p> 
-        <p>A história segue o soldado Ronald “Red” Daniels e seu esquadrão de infantaria enquanto <br>
+        <p>Call of Duty é uma franquia de jogos eletrônicos de tiro em primeira pessoa que se tornou um ícone na indústria dos videogames. Lançada pela primeira vez em 2003 pela Infinity Ward e publicada pela Activision, a série começou com uma ambientação baseada na Segunda Guerra Mundial, oferecendo uma experiência imersiva e realista dos conflitos históricos. Ao longo dos anos, Call of Duty evoluiu significativamente, expandindo-se para diversos cenários e períodos, desde a Guerra Fria até guerras futuristas e combates contemporâneos.
+
+            O sucesso inicial do jogo deve-se ao seu foco em campanhas single-player envolventes, repletas de narrativas cativantes e personagens memoráveis, além de uma jogabilidade refinada e intensa. Com o lançamento de Call of Duty 4: Modern Warfare em 2007, a série reinventou-se, trazendo uma nova era de combate moderno e popularizando o modo multiplayer online, que se tornou um dos pilares da franquia.
+            
+            Desde então, Call of Duty continua a inovar e atrair milhões de jogadores ao redor do mundo, lançando títulos anuais que exploram diferentes temáticas e estilos de jogo. A série é conhecida não apenas pela sua ação frenética e gráficos impressionantes, mas também pela sua capacidade de se adaptar às mudanças tecnológicas e às preferências dos jogadores, mantendo-se relevante e influente na cultura dos videogames por mais de duas décadas.</p> 
+        <p>A história segue o soldado Ronald “Red” Daniels e seu esquadrão de infantaria enquanto
             tentam acabar com os nazistas no final da Segunda Guerra Mundial.</p>
-        <ul>
-            <li>Ano de lançamento: 2017</li>
-            <li>Plataformas: Windows, Xbox One, PS4 </li>
-        </ul>
 </section>
 <section class="section1">
     <h2>1. Call of Duty 2 (entre 1941 – 1945)</h2>
