--- a/Página Inicial.html
+++ b/Página Inicial.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -7,16 +7,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Cronologia de Call of Duty: conheça a história dos jogos da franquia</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
     <header class="barra-superior">
         <nav class="logo-background">
             <ul class="navbar">
-                <li><a href="/Página Inicial/index.html"><strong>PÁGINA INICIAL</strong></a></li>
-                <li><a href="/Página Inicial/index2.html"><strong>IMAGENS</strong></a></li>
-                <li><a href="/Página Inicial/index3.html"><strong>CURIOSIDADES</strong></a></li>
+                <li><a href="https://flaviaxfds.github.io/cssgo.git.hub/"><strong>PÁGINA INICIAL</strong></a></li>
+                <li><a href="/Imagens.html"><strong>IMAGENS</strong></a></li>
+                <li><a href="/Curiosidades.html"><strong>CURIOSIDADES</strong></a></li>
             </ul>
         </nav>
     </header>
