--- a/Página Inicial.html
+++ b/Página Inicial.html
@@ -14,7 +14,7 @@
     <header class="barra-superior">
         <nav class="logo-background">
             <ul class="navbar">
-                <li><a href="https://flaviaxfds.github.io/cssgo.git.hub/"><strong>PÁGINA INICIAL</strong></a></li>
+                <li><a href="/Página Inicial.html"><strong>PÁGINA INICIAL</strong></a></li>
                 <li><a href="/Imagens.html"><strong>IMAGENS</strong></a></li>
                 <li><a href="/Curiosidades.html"><strong>CURIOSIDADES</strong></a></li>
             </ul>
@@ -22,68 +22,12 @@
     </header>
     <div class="capacss"></div>
     <main>
-<section class="section">
-            <h1>CSS GO: O jogo que emocionou gerações.</h1>
-        
-        <hr>
-        <br>
-        </h2>
-        <p>Call of Duty é uma franquia de jogos eletrônicos de tiro em primeira pessoa que se tornou um ícone na indústria dos videogames. Lançada pela primeira vez em 2003 pela Infinity Ward e publicada pela Activision, a série começou com uma ambientação baseada na Segunda Guerra Mundial, oferecendo uma experiência imersiva e realista dos conflitos históricos. Ao longo dos anos, Call of Duty evoluiu significativamente, expandindo-se para diversos cenários e períodos, desde a Guerra Fria até guerras futuristas e combates contemporâneos.
-
-            O sucesso inicial do jogo deve-se ao seu foco em campanhas single-player envolventes, repletas de narrativas cativantes e personagens memoráveis, além de uma jogabilidade refinada e intensa. Com o lançamento de Call of Duty 4: Modern Warfare em 2007, a série reinventou-se, trazendo uma nova era de combate moderno e popularizando o modo multiplayer online, que se tornou um dos pilares da franquia.
-            
-            Desde então, Call of Duty continua a inovar e atrair milhões de jogadores ao redor do mundo, lançando títulos anuais que exploram diferentes temáticas e estilos de jogo. A série é conhecida não apenas pela sua ação frenética e gráficos impressionantes, mas também pela sua capacidade de se adaptar às mudanças tecnológicas e às preferências dos jogadores, mantendo-se relevante e influente na cultura dos videogames por mais de duas décadas.</p> 
-        <p>A história segue o soldado Ronald “Red” Daniels e seu esquadrão de infantaria enquanto
-            tentam acabar com os nazistas no final da Segunda Guerra Mundial.</p>
-</section>
-<section class="section1">
-    <h2>1. Call of Duty 2 (entre 1941 – 1945)</h2>
-    <p>A maioria dos primeiros títulos de Call Of Duty tem início em 1942, o segundo jogo é <br>
-        uma exceção, pois começa no final de 1941. Durante a campanha, controla-se soldados <br>
-        de três das potências aliadas: EUA, Grã-Bretanha e Rússia. Cada uma das aventuras <br>
-        acontece separadamente, e todas com muitos obstáculos difíceis de superar. </p>
-    <ul>
-        <li>Ano de lançamento: 2005</li>
-        <li>Plataformas: Windows, Mac, Xbox 360 </li>
-    </ul>
-</section>
-<section class="section2">
-    <h2>2. Call of Duty: World at War (entre 1942 – 1945)</h2>
-    <p>A cronologia de Call of Duty, pelo menos nos primeiros títulos, bem confusa. No início <br>
-        do jogo, o jogador participa do ataque à Ilha Makin, ocorrido em 1942, como sua contraparte <br>
-         da vida real. O resto da história se desenrola de maneira semelhante, conforme se envolve em <br>
-          muitas batalhas e incidentes famosos da 2ª Guerra Mundial. Em cada missão, seguem-se algumas <br>
-           tropas americanas ou o foco vai para um esquadrão russo. </p>
-    <ul>
-        <li>Ano de lançamento: 2008</li>
-        <li>Plataformas: Windows, Xbox 360, PS3, Nintendo DS </li>
-    </ul>
-</section>
-<section class="section3">
-    <h2>3. Call of Duty (entre 1942 – 1945)</h2>
-    <p>Apesar de ter começado também em 1942, a maior parte do primeiro jogo se apresenta em 1944 <br>
-         e 1945, quando as potências aliadas se opõem às forças nazistas. </p>
-    <p>No clássico estilo COD, a campanha permite que se observe três perspectivas diferentes sobre<br>
-         a guerra, com diversos protagonistas. Os personagens principais pertencem a nações <br>
-         diferentes, mas todos eles têm o mesmo objetivo de virar a guerra a favor das potências <br>
-         aliadas.  </p>
-    <ul>
-        <li>Ano de lançamento: 2003</li>
-        <li>Plataformas: Windows, Mac, Ps3, Xbox 360 </li>
-    </ul>
-</section>
-<section class="section4">
-    <h2>4. Call of Duty 3 (1944)</h2>
-    <p>Até que enfim um jogo mais fácil de definir o período. A campanha de Call of Duty 3 concentra-se <br>
-         exclusivamente, em 1944 com a maior parte da atenção voltada para a Batalha da Normandia – o <br>
-         início do fim do terceiro Reich. </p>
-    <p>Outro aspecto interessante da história é que as forças polonesas, francesas e canadenses têm grandes <br>
-        papéis na trama, ao lado dos soldados americanos e britânicos já conhecidos. </p>
-    <ul>
-        <li>Ano de lançamento: 2006</li>
-        <li>Plataformas: Xbox, Xbox 360, PS2, PS3, Wii </li>
-    </ul>
-</section>       
+     <h1> Bem-vindo ao Universo de Call of Duty</h1>
+     <p>Explore a história épica e a evolução de uma das franquias mais icônicas da indústria dos videogames. Desde suas raízes na Segunda Guerra Mundial até os campos de batalha modernos e futuristas, Call of Duty cativou milhões de jogadores ao redor do mundo com suas campanhas envolventes e o emocionante multiplayer online. Descubra como esta série revolucionária redefine constantemente o gênero de tiro em primeira pessoa, proporcionando experiências que vão além do entretenimento, tornando-se parte da cultura dos videogames.</p>
+     <br>
+     <hr>
+     <br>
+     <h2>Esse texto é projetado para capturar a essência e a história rica por trás da franquia Call of Duty, dando aos visitantes uma visão geral atraente e informativa na página inicial do seu site.</h2>
     </main>
     <footer class="barra-inferior">
         <p> &copy; 2024 - Criado por Flavia Dev</p>
