--- a/Imagens.html
+++ b/Imagens.html
@@ -16,11 +16,18 @@
     <header class="barra-superior">
         <nav class="logo-background">
             <ul class="navbar">
-                <li><a href="https://flaviaxfds.github.io/cssgo.git.hub/"><strong>PÁGINA INICIAL</strong></a></li>
-                <li><a href="/index2.html"><strong>IMAGENS</strong></a></li>
-                <li><a href="/index3.html"><strong>CURIOSIDADES</strong></a></li>
+                <li><a href="/Página Inicial.html"><strong>PÁGINA INICIAL</strong></a></li>
+                <li><a href="/Imagens.html"><strong>IMAGENS</strong></a></li>
+                <li><a href="/Curiosidades.html"><strong>CURIOSIDADES</strong></a></li>
             </ul>
         </nav>
     </header>
+<div class="capacss"></div>
+    <main>
+
+    </main>
+<footer class="barra-inferior">
+    <p> &copy; 2024 - Criado por Flavia Dev</p>
+</footer>
 </body>
 </html>
