--- a/index1.html
+++ b/index1.html
@@ -14,9 +14,9 @@
     <header class="barra-superior">
         <nav class="logo-background">
             <ul class="navbar">
-                <li><a href="/Página Inicial.html"><strong>PÁGINA INICIAL</strong></a></li>
-                <li><a href="/Imagens.html"><strong>IMAGENS</strong></a></li>
-                <li><a href="/Curiosidades.html"><strong>CURIOSIDADES</strong></a></li>
+                <li><a href="/index1.html"><strong>PÁGINA INICIAL</strong></a></li>
+                <li><a href="/index2.html"><strong>CURIOSIDADES</strong></a></li>
+                <li><a href="/index3.html"><strong>IMAGENS</strong></a></li>
             </ul>
         </nav>
     </header>
