--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Cronologia de Call of Duty: conheça a história dos jogos da franquia</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
