--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="barra-superior">
         <nav class="logo-background">
             <ul class="navbar">
-                <li><a href="/index1.html"><strong>PÁGINA INICIAL</strong></a></li>
+                <li><a href="/index.html"><strong>PÁGINA INICIAL</strong></a></li>
                 <li><a href="/index2.html"><strong>CURIOSIDADES</strong></a></li>
                 <li><a href="/index3.html"><strong>IMAGENS</strong></a></li>
             </ul>
@@ -33,6 +33,6 @@
         <p> &copy; 2024 - Criado por Flavia Dev</p>
     </footer>
 </body>
-</html> 
+</html>*/
 
 
