--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
     <header class="barra-superior">
         <nav class="logo-background">
             <ul class="navbar">
-                <li><a href="/index1.html"><strong>PÁGINA INICIAL</strong></a></li>
+                <li><a href="/index.html"><strong>PÁGINA INICIAL</strong></a></li>
                 <li><a href="/index2.html"><strong>CURIOSIDADES</strong></a></li>
                 <li><a href="/index3.html"><strong>IMAGENS</strong></a></li>
             </ul>
